@@ -26,6 +26,32 @@
 # MA 02110-1301, USA.
 
 
+# Make sure we get the transition between LATIN1 and UTF-8 regimes correct.
+oldVersions = [ '0', '01', '1', '2', '3', '4',
+	'0.0', '0.1', '0.5', '0.9', '0.10', '1.0', '1.1', '1.5', '1.9', '1.10',
+	'2.0', '2.1', '2.5', '2.9', '2.10', '3.0', '3.1', '3.5', '3.9', '3.10',
+	'4.0', '4.01', '4.1', '4.2', '4.3', '4.4', '4.4.0', '4.4.0.1', '4.4.01',
+	'4.3.1', '4.3.4', '4.3.9', '4.3.10', '4.1.1', '4.1.4', '4.1.9', '4.1.10',
+	'4.0.1', '4.0.4', '4.0.9', '4.0.10', '3.9.1', '3.9.4', '3.9.9', '3.9.10',
+	'1.0.1', '1.0.4', '1.0.9', '1.0.10', '0.9.1', '0.9.4', '0.9.9', '0.9.10' ]
+newVersions = [ '', '5', '6', '7', '8', '9', '10', '20', '30', '40', '50', '90',
+	'4.5', '4.6', '4.9', '4.10', '4.20', '4.30', '4.40', '4.50', '4.90',
+	'5.1', '5.9', '9.1', '9.9', '10.1', '10.9', '40.1', '40.9',
+	'4.4.1', '4.4.1.1', '4.4.2', '4.4.3', '4.4.4', '4.4.5', '4.4.9', '4.4.10',
+	'4.5.0.1', '4.5.1', '4.6.0.1', '4.6.1', '4.10.0.1', '4.10.1',
+	'5.0.1', '5.1.1', '5.4.1', '5.9.1', '9.0.1', '9.9.9', '10.0.1' ]
+suffixes = [ '', 'a', 'alpha', '.', '.0', '+a', '-a', '-0', '-1', '-9', '-10' ]
+
+for v in oldVersions:
+	for s in suffixes:
+		if regina.versionUsesUTF8(v + s):
+			print 'ERROR: Version ' + v + s + ' claims to use UTF-8.'
+
+for v in newVersions:
+	for s in suffixes:
+		if not regina.versionUsesUTF8(v + s):
+			print 'ERROR: Version ' + v + s + ' does not claim to use UTF-8.'
+
 # Load a file created by an old version of regina.  This file stores it
 # strings as LATIN1, which should be converted to UTF-8 on import.
 i18nOld = regina.readFileMagic('i18n-latin1.rga')
